# MapMyFamily-DB

mapMyFamily/: .env  pyproject.toml  requirements.txt
mapMyFamily/app/: Dockerfile  app.py  requirements.txt  vercel.json
mapMyFamily/app/model/: tree_diagram.py
mapMyFamily/mapmyfamily/app/: app.py
