[project]
name = "mapmyfamily"
version = "0.1.0"
description = ""
authors = [
    {name = "Samar Manjeshwar",email = "sam.manjeshwar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo[srv] (>=4.10.1,<5.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
